cmake_minimum_required(VERSION 3.14)

project(cyrus-sasl
    VERSION 2.1.28
    LANGUAGES C
    DESCRIPTION "Cyrus SASL implementation"
    HOMEPAGE_URL "https://www.cyrusimap.org"
)

set(SASL_VERSION_MAJOR ${PROJECT_VERSION_MAJOR})
set(SASL_VERSION_MINOR ${PROJECT_VERSION_MINOR})
set(SASL_VERSION_STEP ${PROJECT_VERSION_PATCH})
set(VERSION "${PROJECT_VERSION}")

set(CMAKE_C_STANDARD 99)
set(CMAKE_C_STANDARD_REQUIRED ON)
set(CMAKE_POSITION_INDEPENDENT_CODE ON)

if(NOT CMAKE_BUILD_TYPE)
    set(CMAKE_BUILD_TYPE Release CACHE STRING "Build type" FORCE)
endif()

list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake")

include(GNUInstallDirs)
include(CheckFunctionExists)
include(CheckIncludeFile)
include(CheckSymbolExists)
include(CheckTypeSize)
include(TestBigEndian)

option(SASL_STATIC "Build static library" OFF)
option(SASL_SHARED "Build shared library" ON)

option(SASL_WITH_OPENSSL "Use OpenSSL" ON)
option(SASL_WITH_GSSAPI "Enable GSSAPI/Kerberos support" OFF)
option(SASL_WITH_PAM "Enable PAM support" OFF)
option(SASL_WITH_LDAP "Enable LDAP support" OFF)
option(SASL_WITH_SQL "Enable SQL auxprop plugin" OFF)
option(SASL_WITH_MYSQL "Enable MySQL support" OFF)
option(SASL_WITH_PGSQL "Enable PostgreSQL support" OFF)
option(SASL_WITH_SQLITE "Enable SQLite support" OFF)
option(SASL_WITH_SQLITE3 "Enable SQLite3 support" OFF)

option(SASL_ENABLE_SCRAM "Enable SCRAM authentication" ON)
option(SASL_ENABLE_OTP "Enable OTP authentication" ON)
option(SASL_ENABLE_SRP "Enable SRP authentication" OFF)
option(SASL_ENABLE_ANON "Enable ANONYMOUS authentication" ON)
option(SASL_ENABLE_PLAIN "Enable PLAIN authentication" ON)
option(SASL_ENABLE_PASSDSS "Enable PASSDSS authentication" OFF)
option(SASL_ENABLE_OPAQUE "Enable OPAQUE authentication" ON)
option(SASL_ENABLE_GS2 "Enable GS2 authentication" OFF)
option(SASL_ENABLE_SASLDB "Enable SASLDB auxprop plugin" ON)
option(SASL_ENABLE_LDAPDB "Enable LDAPDB plugin" OFF)
option(SASL_ENABLE_CHECKAPOP "Enable sasl_checkapop" ON)

option(SASL_BUILD_UTILS "Build utility programs" ON)
option(SASL_BUILD_SAMPLE "Build sample programs" ON)
option(SASL_BUILD_TESTS "Build test programs" OFF)

if(NOT WIN32)
    option(SASL_BUILD_SASLAUTHD "Build saslauthd daemon" OFF)
    option(SASL_BUILD_PWCHECK "Build pwcheck daemon" OFF)
endif()

set(SASL_DEV_RANDOM "/dev/urandom" CACHE STRING "Path to pseudo random number generator")
set(SASL_PLUGINDIR "${CMAKE_INSTALL_FULL_LIBDIR}/sasl2" CACHE STRING "Plugin directory")
set(SASL_CONFIGDIR "${SASL_PLUGINDIR}:${CMAKE_INSTALL_FULL_SYSCONFDIR}/sasl2" CACHE STRING "Config directory")
set(SASL_DB_PATH "${CMAKE_INSTALL_FULL_LOCALSTATEDIR}/sasldb2" CACHE STRING "SASLDB database path")

set(SASLDB_BACKEND "LMDB" CACHE STRING "SASLDB backend (LMDB, GDBM, NDBM, NONE)")
set_property(CACHE SASLDB_BACKEND PROPERTY STRINGS LMDB GDBM NDBM NONE)

if(WIN32)
    set(SASL_DL_LIB "")
    set(LIB_SOCKET ws2_32)
    add_definitions(-DWIN32 -D_WINDOWS -D_MBCS -D_USRDLL -D_CRT_SECURE_NO_DEPRECATE=1)
    add_definitions(-DNO_STATIC_PLUGINS -DGCC_FALLTHROUGH=)
else()
    find_library(SASL_DL_LIB NAMES dl)
    set(LIB_SOCKET "")
    check_function_exists(socket HAVE_SOCKET_FUNC)
    if(NOT HAVE_SOCKET_FUNC)
        find_library(LIB_SOCKET socket)
    endif()
endif()

find_package(OpenSSL REQUIRED)

if(SASL_WITH_GSSAPI AND NOT WIN32)
    find_package(PkgConfig)
    if(PkgConfig_FOUND)
        pkg_check_modules(KRB5 krb5-gssapi)
        if(NOT KRB5_FOUND)
            pkg_check_modules(KRB5 krb5)
        endif()
    endif()
    if(KRB5_FOUND)
        set(HAVE_GSSAPI 1)
        check_include_file("gssapi.h" HAVE_GSSAPI_H)
        check_include_file("gssapi/gssapi.h" HAVE_GSSAPI_GSSAPI_H)
        check_include_file("gssapi/gssapi_ext.h" HAVE_GSSAPI_GSSAPI_EXT_H)
        check_include_file("gssapi/gssapi_krb5.h" HAVE_GSSAPI_GSSAPI_KRB5_H)
    endif()
endif()

if(SASL_WITH_PAM AND NOT WIN32)
    find_library(PAM_LIB pam)
    check_include_file("security/pam_appl.h" HAVE_PAM_APPL_H)
    if(PAM_LIB AND HAVE_PAM_APPL_H)
        set(HAVE_PAM 1)
    endif()
endif()

if(SASL_WITH_LDAP AND NOT WIN32)
    find_library(LDAP_LIB ldap)
    find_library(LBER_LIB lber)
    check_include_file("ldap.h" HAVE_LDAP_H)
    check_include_file("lber.h" HAVE_LBER_H)
    if(LDAP_LIB AND HAVE_LDAP_H)
        set(HAVE_LDAP 1)
    endif()
endif()

if(SASLDB_BACKEND STREQUAL "LMDB")
    find_library(LMDB_LIB lmdb)
    check_include_file("lmdb.h" HAVE_LMDB_H)
    if(LMDB_LIB AND HAVE_LMDB_H)
        set(SASL_DB_BACKEND "db_lmdb.c")
        set(SASL_DB_LIB "${LMDB_LIB}")
        set(SASL_LMDB 1)
    else()
        message(WARNING "LMDB not found, falling back to NONE backend")
        set(SASLDB_BACKEND "NONE")
        set(SASL_DB_BACKEND "db_none.c")
        set(SASL_DB_LIB "")
    endif()
elseif(SASLDB_BACKEND STREQUAL "GDBM")
    find_library(GDBM_LIB gdbm)
    check_include_file("gdbm.h" HAVE_GDBM_H)
    if(GDBM_LIB AND HAVE_GDBM_H)
        set(SASL_DB_BACKEND "db_gdbm.c")
        set(SASL_DB_LIB "${GDBM_LIB}")
        set(SASL_GDBM 1)
    else()
        message(FATAL_ERROR "GDBM not found")
    endif()
elseif(SASLDB_BACKEND STREQUAL "NDBM")
    find_library(NDBM_LIB ndbm)
    check_include_file("ndbm.h" HAVE_NDBM_H)
    if(NDBM_LIB OR HAVE_NDBM_H)
        set(SASL_DB_BACKEND "db_ndbm.c")
        set(SASL_DB_LIB "${NDBM_LIB}")
        set(SASL_NDBM 1)
    else()
        message(FATAL_ERROR "NDBM not found")
    endif()
else()
    set(SASL_DB_BACKEND "db_none.c")
    set(SASL_DB_LIB "")
endif()

if(SASL_ENABLE_SASLDB)
    set(SASL_DB_UTILS "saslpasswd2" "sasldblistusers2")
    set(SASL_DB_MANS "saslpasswd2.8" "sasldblistusers2.8")
endif()

if(NOT WIN32)
    check_function_exists(memcpy HAVE_MEMCPY)
    check_function_exists(memset HAVE_MEMSET)
    check_function_exists(strdup HAVE_STRDUP)
    check_function_exists(strchr HAVE_STRCHR)
    check_function_exists(strerror HAVE_STRERROR)
    check_function_exists(strspn HAVE_STRSPN)
    check_function_exists(strstr HAVE_STRSTR)
    check_function_exists(strtol HAVE_STRTOL)
    check_function_exists(gettimeofday HAVE_GETTIMEOFDAY)
    check_function_exists(inet_aton HAVE_INET_ATON)
    check_function_exists(select HAVE_SELECT)
    check_function_exists(gethostname HAVE_GETHOSTNAME)
    check_function_exists(getdomainname HAVE_GETDOMAINNAME)
    check_function_exists(getpwnam HAVE_GETPWNAM)
    check_function_exists(getspnam HAVE_GETSPNAM)
    check_function_exists(getpassphrase HAVE_GETPASSPHRASE)
    check_function_exists(asprintf HAVE_ASPRINTF)
    check_function_exists(strlcat HAVE_STRLCAT)
    check_function_exists(strlcpy HAVE_STRLCPY)
    check_function_exists(jrand48 HAVE_JRAND48)
    check_function_exists(memmem HAVE_MEMMEM)
    check_function_exists(mkdir HAVE_MKDIR)
    check_function_exists(syslog HAVE_SYSLOG)
    check_function_exists(getsubopt HAVE_GETSUBOPT)
    check_function_exists(snprintf HAVE_SNPRINTF)
    check_function_exists(vsnprintf HAVE_VSNPRINTF)
    check_function_exists(getaddrinfo HAVE_GETADDRINFO)
    check_function_exists(getnameinfo HAVE_GETNAMEINFO)
    check_function_exists(geteuid HAVE_GETEUID)
    check_function_exists(getuid HAVE_GETUID)
    check_function_exists(getpid HAVE_GETPID)
    check_function_exists(getlogin_r HAVE_GETLOGIN_R)

    check_include_file(dlfcn.h HAVE_DLFCN_H)
    check_include_file(fcntl.h HAVE_FCNTL_H)
    check_include_file(limits.h HAVE_LIMITS_H)
    check_include_file(malloc.h HAVE_MALLOC_H)
    check_include_file(paths.h HAVE_PATHS_H)
    check_include_file(strings.h HAVE_STRINGS_H)
    check_include_file(string.h HAVE_STRING_H)
    check_include_file(sys/file.h HAVE_SYS_FILE_H)
    check_include_file(sys/time.h HAVE_SYS_TIME_H)
    check_include_file(syslog.h HAVE_SYSLOG_H)
    check_include_file(time.h HAVE_TIME_H)
    check_include_file(unistd.h HAVE_UNISTD_H)
    check_include_file(inttypes.h HAVE_INTTYPES_H)
    check_include_file(sys/uio.h HAVE_SYS_UIO_H)
    check_include_file(sys/param.h HAVE_SYS_PARAM_H)
    check_include_file(sysexits.h HAVE_SYSEXITS_H)
    check_include_file(stdarg.h HAVE_STDARG_H)
    check_include_file(varargs.h HAVE_VARARGS_H)
    check_include_file(krb5.h HAVE_KRB5_H)
    check_include_file(netinet/in.h HAVE_NETINET_IN_H)
    check_include_file(netdb.h HAVE_NETDB_H)
    check_include_file(sys/un.h HAVE_SYS_UN_H)
    check_include_file(getopt.h HAVE_GETOPT_H)
    check_include_file(arpa/inet.h HAVE_ARPA_INET_H)
    check_include_file(sys/socket.h HAVE_SYS_SOCKET_H)
    check_include_file(crypt.h HAVE_CRYPT_H)
    check_include_file(pwd.h HAVE_PWD_H)
    check_include_file(shadow.h HAVE_SHADOW_H)
    check_include_file(sys/select.h HAVE_SYS_SELECT_H)
    check_include_file(dirent.h HAVE_DIRENT_H)
    check_include_file(sys/wait.h HAVE_SYS_WAIT_H)
    check_include_file(sys/types.h HAVE_SYS_TYPES_H)

    find_package(Threads)
    if(Threads_FOUND AND CMAKE_USE_PTHREADS_INIT)
        set(HAVE_PTHREAD 1)
    endif()

    check_type_size(socklen_t SOCKLEN_T_SIZE)
    if(SOCKLEN_T_SIZE)
        set(HAVE_SOCKLEN_T 1)
    endif()
    set(CMAKE_EXTRA_INCLUDE_FILES "sys/socket.h;sys/types.h")
    check_type_size("struct sockaddr_storage" SOCKADDR_STORAGE_SIZE)
    if(SOCKADDR_STORAGE_SIZE)
        set(HAVE_STRUCT_SOCKADDR_STORAGE 1)
    endif()
    unset(CMAKE_EXTRA_INCLUDE_FILES)

    check_symbol_exists(sa_len "sys/socket.h;netinet/in.h" HAVE_SOCKADDR_SA_LEN)
endif()

if(SASL_ENABLE_SCRAM)
    set(HAVE_SHA512 1)
endif()

if(SASL_ENABLE_CHECKAPOP)
    set(DO_SASL_CHECKAPOP 1)
endif()

if(SASL_SHARED)
    set(DO_DLOPEN 1)
endif()

configure_file(
    "${CMAKE_CURRENT_SOURCE_DIR}/cmake/config.h.in"
    "${CMAKE_CURRENT_BINARY_DIR}/config.h"
    @ONLY
)

add_definitions(-DHAVE_CONFIG_H)

set(GENERATED_INCLUDE_DIR "${CMAKE_CURRENT_BINARY_DIR}/include")
file(MAKE_DIRECTORY "${GENERATED_INCLUDE_DIR}")

add_subdirectory(include)
add_subdirectory(common)
add_subdirectory(sasldb)
add_subdirectory(lib)
add_subdirectory(plugins)

if(SASL_BUILD_UTILS)
    add_subdirectory(utils)
endif()

if(SASL_BUILD_SAMPLE)
    add_subdirectory(sample)
endif()

if(SASL_BUILD_TESTS)
    enable_testing()
    add_subdirectory(tests)
endif()

if(SASL_BUILD_SASLAUTHD AND NOT WIN32)
    add_subdirectory(saslauthd)
endif()

set(prefix "${CMAKE_INSTALL_PREFIX}")
set(exec_prefix "\${prefix}")
set(libdir "\${exec_prefix}/${CMAKE_INSTALL_LIBDIR}")
set(includedir "\${prefix}/${CMAKE_INSTALL_INCLUDEDIR}")

set(PC_LIBS_PRIVATE "")
if(SASL_DL_LIB)
    set(PC_LIBS_PRIVATE "${PC_LIBS_PRIVATE} -ldl")
endif()
if(LIB_SOCKET)
    set(PC_LIBS_PRIVATE "${PC_LIBS_PRIVATE} -l${LIB_SOCKET}")
endif()
if(HAVE_PTHREAD)
    set(PC_LIBS_PRIVATE "${PC_LIBS_PRIVATE} -lpthread")
endif()
set(PC_LIBS_PRIVATE "${PC_LIBS_PRIVATE} -lcrypto")

configure_file(
    "${CMAKE_CURRENT_SOURCE_DIR}/cmake/libsasl2.pc.in"
    "${CMAKE_CURRENT_BINARY_DIR}/libsasl2.pc"
    @ONLY
)
install(FILES "${CMAKE_CURRENT_BINARY_DIR}/libsasl2.pc"
    DESTINATION "${CMAKE_INSTALL_LIBDIR}/pkgconfig"
)

message(STATUS "")
message(STATUS "cyrus-sasl ${PROJECT_VERSION}")
message(STATUS "")
message(STATUS "  Prefix:        ${CMAKE_INSTALL_PREFIX}")
message(STATUS "  Build type:    ${CMAKE_BUILD_TYPE}")
message(STATUS "  Shared:        ${SASL_SHARED}")
message(STATUS "  Static:        ${SASL_STATIC}")
message(STATUS "  SASLDB backend: ${SASLDB_BACKEND}")
message(STATUS "  OpenSSL:       ${OPENSSL_VERSION}")
message(STATUS "  GSSAPI:        ${HAVE_GSSAPI}")
message(STATUS "  PAM:           ${HAVE_PAM}")
message(STATUS "  LDAP:          ${HAVE_LDAP}")
message(STATUS "  SCRAM:         ${SASL_ENABLE_SCRAM}")
message(STATUS "  OTP:           ${SASL_ENABLE_OTP}")
message(STATUS "  SRP:           ${SASL_ENABLE_SRP}")
message(STATUS "  ANONYMOUS:     ${SASL_ENABLE_ANON}")
message(STATUS "  PLAIN:         ${SASL_ENABLE_PLAIN}")
message(STATUS "  OPAQUE:        ${SASL_ENABLE_OPAQUE}")
message(STATUS "  SASLDB:        ${SASL_ENABLE_SASLDB}")
message(STATUS "")
