set(SAMPLE_INCLUDES
    ${CMAKE_SOURCE_DIR}/include
    ${CMAKE_BINARY_DIR}
)

add_executable(sample-client sample-client.c)
target_include_directories(sample-client PRIVATE ${SAMPLE_INCLUDES})
target_link_libraries(sample-client PRIVATE sasl2)
if(WIN32)
    target_link_libraries(sample-client PRIVATE ${LIB_SOCKET})
    target_compile_definitions(sample-client PRIVATE NEED_GETOPT)
else()
    if(LIB_SOCKET)
        target_link_libraries(sample-client PRIVATE ${LIB_SOCKET})
    endif()
endif()

add_executable(sample-server sample-server.c)
target_include_directories(sample-server PRIVATE ${SAMPLE_INCLUDES})
target_link_libraries(sample-server PRIVATE sasl2)
if(WIN32)
    target_link_libraries(sample-server PRIVATE ${LIB_SOCKET})
    target_compile_definitions(sample-server PRIVATE NEED_GETOPT)
else()
    if(LIB_SOCKET)
        target_link_libraries(sample-server PRIVATE ${LIB_SOCKET})
    endif()
endif()

add_executable(sample-client-old client.c common.c common.h)
set_target_properties(sample-client-old PROPERTIES OUTPUT_NAME "client")
target_include_directories(sample-client-old PRIVATE ${SAMPLE_INCLUDES})
target_link_libraries(sample-client-old PRIVATE sasl2)
if(WIN32)
    target_link_libraries(sample-client-old PRIVATE ${LIB_SOCKET})
else()
    if(LIB_SOCKET)
        target_link_libraries(sample-client-old PRIVATE ${LIB_SOCKET})
    endif()
endif()

add_executable(sample-server-old server.c common.c common.h)
set_target_properties(sample-server-old PROPERTIES OUTPUT_NAME "server")
target_include_directories(sample-server-old PRIVATE ${SAMPLE_INCLUDES})
target_link_libraries(sample-server-old PRIVATE sasl2)
if(WIN32)
    target_link_libraries(sample-server-old PRIVATE ${LIB_SOCKET})
else()
    if(LIB_SOCKET)
        target_link_libraries(sample-server-old PRIVATE ${LIB_SOCKET})
    endif()
endif()
