set(UTILS_INCLUDES
    ${CMAKE_SOURCE_DIR}/include
    ${CMAKE_BINARY_DIR}
    ${CMAKE_SOURCE_DIR}/sasldb
)

if(SASL_ENABLE_SASLDB)
    add_executable(saslpasswd2 saslpasswd.c)
    target_include_directories(saslpasswd2 PRIVATE ${UTILS_INCLUDES})
    target_compile_definitions(saslpasswd2 PRIVATE LIBSASL_EXPORTS=1)
    target_link_libraries(saslpasswd2 PRIVATE sasldb sasl2 OpenSSL::Crypto)
    if(WIN32)
        target_link_libraries(saslpasswd2 PRIVATE ${LIB_SOCKET})
        target_compile_definitions(saslpasswd2 PRIVATE NEED_GETOPT)
    else()
        if(LIB_SOCKET)
            target_link_libraries(saslpasswd2 PRIVATE ${LIB_SOCKET})
        endif()
    endif()
    install(TARGETS saslpasswd2 RUNTIME DESTINATION "${CMAKE_INSTALL_SBINDIR}")

    add_executable(sasldblistusers2 sasldblistusers.c)
    target_include_directories(sasldblistusers2 PRIVATE ${UTILS_INCLUDES})
    target_compile_definitions(sasldblistusers2 PRIVATE LIBSASL_EXPORTS=1)
    target_link_libraries(sasldblistusers2 PRIVATE sasldb sasl2 OpenSSL::Crypto)
    if(WIN32)
        target_link_libraries(sasldblistusers2 PRIVATE ${LIB_SOCKET})
        target_compile_definitions(sasldblistusers2 PRIVATE NEED_GETOPT)
    else()
        if(LIB_SOCKET)
            target_link_libraries(sasldblistusers2 PRIVATE ${LIB_SOCKET})
        endif()
    endif()
    install(TARGETS sasldblistusers2 RUNTIME DESTINATION "${CMAKE_INSTALL_SBINDIR}")
endif()

add_executable(pluginviewer pluginviewer.c)
target_include_directories(pluginviewer PRIVATE ${UTILS_INCLUDES})
target_link_libraries(pluginviewer PRIVATE sasl2 OpenSSL::Crypto)
if(WIN32)
    target_link_libraries(pluginviewer PRIVATE ${LIB_SOCKET})
    target_compile_definitions(pluginviewer PRIVATE NEED_GETOPT)
else()
    if(LIB_SOCKET)
        target_link_libraries(pluginviewer PRIVATE ${LIB_SOCKET})
    endif()
endif()
install(TARGETS pluginviewer RUNTIME DESTINATION "${CMAKE_INSTALL_SBINDIR}")

add_executable(testsuite testsuite.c)
target_include_directories(testsuite PRIVATE ${UTILS_INCLUDES})
target_link_libraries(testsuite PRIVATE sasl2 OpenSSL::Crypto)
if(WIN32)
    target_link_libraries(testsuite PRIVATE ${LIB_SOCKET})
    target_compile_definitions(testsuite PRIVATE NEED_GETOPT)
else()
    if(LIB_SOCKET)
        target_link_libraries(testsuite PRIVATE ${LIB_SOCKET})
    endif()
endif()
